# dz_20_Scrapy

./: pyproject.toml
scrapy_workua/: items.py  middlewares.py  settings.py
scrapy_workua/spiders/: workua.py
